# pike

./: .gitignore  CITATION.cff  README.md  pyproject.toml
experiments/: README.md
experiments/poly_system/: plot.ipynb  simulate.ipynb
experiments/van_der_pol/: plot.ipynb  simulate.ipynb
pike/: __init__.py  algorithm.py  estimation.py  systems.py  utils.py
results/: poly_K_matrices_L100.npz  poly_K_matrices_L1000.npz  poly_K_matrices_L150.npz  poly_K_matrices_L200.npz  poly_K_matrices_L68.npz  poly_errors_n3_sys1000.npz  poly_sparse_matrices.npz  poly_trajectories_L200.npz  vdp_K_matrices_L1000.npz  vdp_errors_sys10.npz  vdp_errors_sys100.npz  vdp_errors_sys200.npz  vdp_sparse_matrices.npz  vdp_trajectories_L1000.npz
