[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pike-koopman"
version = "0.1.0"
description = "Parameter-Independent Koopman Expansion for parametric dynamical systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thomas Mongaillard", email = "thomas.mongaillard@univ-lorraine.fr" }
]
keywords = [
    "koopman operator",
    "dynamical systems",
    "system identification",
    "transfer learning",
    "EDMD",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
experiments = [
    "tqdm",
    "matplotlib",
    "jupyter",
]   

[project.urls]
Repository   = "https://github.com/thomasmong/pike"
Paper        = "https://github.com/thomasmong/pike/blob/main/paper.pdf"

[tool.setuptools.packages.find]
where = ["."]
include = ["pike*"]
